# SignalDrift

./: .coveragerc  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  coverage.xml  filename_changes.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.bat  setup.py  setup.sh  test_polymarket_quick.py
.claude/: CLAUDE.md  README.md
data/: 20250617-mlb-sd-lad-2025-06-17-polymarket_market_events.csv  20250617_mlb-cle-sf-2025-06-17_polymarket-market-events.csv  20250617_mlb-mil-chc-2025-06-17_orders.csv  20250617_mlb-mil-chc-2025-06-17_polymarket-market-events.csv  20250617_mlb-sd-lad-2025-06-17_orders.csv  20250619-mlb-ari-tor-2025-06-19-polymarket_market_events.csv  20250619-mlb-ari-tor-2025-06-19-synthetic_orders.csv  20250619-mlb-cle-sf-2025-06-19-polymarket_market_events.csv  20250619-mlb-cle-sf-2025-06-19-synthetic_orders.csv  20250619-mlb-col-wsh-2025-06-19-polymarket_market_events.csv  20250619-mlb-col-wsh-2025-06-19-synthetic_orders.csv  20250619-mlb-hou-bal-2025-06-19_orders.csv  20250619-mlb-kc-tex-2025-06-19-polymarket_market_events.csv  20250619-mlb-kc-tex-2025-06-19-synthetic_orders.csv  20250619-mlb-kc-tex-2025-06-19_orders.csv  20250619-mlb-laa-nyy-2025-06-19-polymarket_market_events.csv  20250619-mlb-laa-nyy-2025-06-19-synthetic_orders.csv  20250619-mlb-mil-chc-2025-06-19-polymarket_market_events.csv  20250619-mlb-mil-chc-2025-06-19-synthetic_orders.csv  20250619-mlb-min-cin-2025-06-19-order_book.csv  20250619-mlb-min-cin-2025-06-19-polymarket_market_events.csv  20250619-mlb-min-cin-2025-06-19-synthetic_orders.csv  20250619-mlb-pit-det-2025-06-19-polymarket_market_events.csv  20250619-mlb-pit-det-2025-06-19-synthetic_orders.csv  20250619-mlb-stl-cws-2025-06-19-polymarket_market_events.csv  20250619-mlb-stl-cws-2025-06-19-synthetic_orders.csv  20250619_mlb-col-wsh-2025-06-19_polymarket-market-events.csv  20250619_mlb-hou-bal-2025-06-19_orders.csv  (+87 more)
experiments/: index.html
(+224 files in other folders)
